# rtc

./: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.c  main.cpp  material.h  openext.cpp  ray.h  sphere.h  utils.h  vec3.h  vec3_simd.h
c-archive/: color.h  main.c  ray.h
